Fixed footer spacing

--- a/src/scenes/Footer/components/UsefulLinks/UsefulLinks.module.scss
+++ b/src/scenes/Footer/components/UsefulLinks/UsefulLinks.module.scss
@@ -122,5 +122,9 @@
 @media(max-width: 900px) and (orientation: portrait){
     .UsefulLinks{
         flex-direction: column;
+
+        .genericLinks{
+            width: 100%;
+        }
     }
 }
